# CaiNiaoNew

./: build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/anim/: collect_slide_in_animation.xml  collect_slide_out_animation.xml  dialog_in_anim.xml  dialog_out_anim.xml  main_slide_in_animation.xml  main_slide_out_animation.xml
app/src/main/res/color/: bottom_nav_color.xml
app/src/main/res/drawable/: animation_progress.xml  blue_skin.xml  checked_frame.xml  ic_error_outline_24.xml
app/src/main/res/layout/: activity_article.xml  activity_collect.xml  activity_main.xml  activity_photo.xml  activity_search.xml  activity_skin.xml  activity_welcome.xml  banner_item_view_layout.xml  bottom_collect_layout.xml  china_banner_item.xml  collect_thumbup_layout.xml  error_loading_layout.xml  flow_history_layout.xml  fragment_china.xml  fragment_entrtainment.xml  fragment_home.xml  fragment_law.xml  fragment_life.xml  fragment_picture.xml  fragment_society.xml  fragment_technology.xml  fragment_video.xml  fragment_world.xml  item_china_rv.xml  item_collect_rv.xml  item_collect_rv_layout.xml  item_enter_rv.xml  item_law_rv.xml  item_life_rv.xml  item_picture_rv.xml  item_search_rv_layout.xml  item_society_rv.xml  item_tech_rv.xml  item_video_rv.xml  item_world_rv.xml  layout_header.xml  layout_rv_society.xml  picture_banner_item.xml  rv_header_footer_layout.xml  share_dialog_layout.xml  (+2 more)
app/src/main/res/menu/: bottom_navigation_menu.xml  collect_toolbar_right_icon.xml  main_toolbar_menu.xml  menu_left.xml
app/src/main/res/navigation/: main_nav.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/values-night/: strings.xml
app/src/main/res/values-v21/: strings.xml  (+1 more)
common/: build.gradle
ffmpeg/: build.gradle
ffmpeg/src/main/: AndroidManifest.xml
ffmpeg/src/main/cpp/: CMakeLists.txt  ffmpegCmd.cpp  ffmpegCmd.h  native-lib.cpp
ffmpeg/src/main/cpp/include/: cmdutils.c  cmdutils.h  config.h  ffmpeg.c  ffmpeg.h  ffmpeg_opt.c
ffmpeg/src/main/cpp/include/libavutil/: eval.c  timer.h
gradle/wrapper/: gradle-wrapper.properties
network/: build.gradle
videoview/: build.gradle
videoview/src/main/: AndroidManifest.xml
(+225 files in other folders)
